--- a/app.html
+++ b/app.html
@@ -151,7 +151,6 @@
             let cart = [];
             let barcodeAtual = null;
             let listaAtualId = null;
-            let idioma = localStorage.getItem('scanlistMarketIdioma') || 'pt';
             
             const dicionario = {
                 pt: {
@@ -161,6 +160,8 @@
                     titulo: "Scanlist Market", placeholderCodigo: "Type or scan the code", btnBuscar: "🔍 Search Product", btnEscanear: "📷 Scan Product", btnCadastrarManual: "📝 Manual Product Entry", menuMinhasListas: "🛒 My Lists", menuVerHistorico: "📄 View History", menuAcessibilidade: "🧓 Accessibility", menuMudarIdioma: "🌐 Switch Language", menuSair: "🚪 Logout", produtoPlaceholder: "Product name", precoPlaceholder: "Unit price", qtdLabel: "Quantity:", btnAddCarrinho: "➕ Add to Cart", btnFinalizarCompra: "🛒 Finish Purchase", fechar: "Close", tituloMinhasListas: "My Shopping Lists", btnCriarLista: "+ Create New List", msgNenhumaLista: "No shopping lists created yet.", btnAdicionarItem: "Add", placeholderNovoItem: "Ex: Rice 1kg", voltarListas: "&larr; Back to All Lists"
                 }
             };
+            
+            let idioma = localStorage.getItem('scanlistMarketIdioma') || 'pt';
 
             function atualizarTextos() {
                 const lang = dicionario[idioma];
@@ -254,7 +255,7 @@
                 itensContainer.innerHTML = "<p>Carregando itens...</p>";
                 try {
                     const itensRef = collection(db, "listas", idDaLista, "itens");
-                    const q = query(itensRef); // Removido orderBy para simplificar
+                    const q = query(itensRef);
                     const querySnapshot = await getDocs(q);
                     if (querySnapshot.empty) {
                         itensContainer.innerHTML = "<p>Nenhum item adicionado a esta lista ainda.</p>";
@@ -453,7 +454,7 @@
                     querySnapshot.forEach((docRef) => {
                         const compra = docRef.data();
                         const data = compra.data.toDate().toLocaleDateString('pt-BR');
-                        html += `<div class="historico-item"><p><strong>Data:</strong> ${data}</p><p><strong>Total:</strong> R$ ${compra.total.toFixed(2).replace(",", ",")}</p></div>`;
+                        html += `<div class="historico-item"><p><strong>Data:</strong> ${data}</p><p><strong>Total:</strong> R$ ${compra.total.toFixed(2).replace(".", ",")}</p></div>`;
                     });
                     container.innerHTML = html;
                 } catch (e) { console.error("Erro ao buscar histórico: ", e); container.innerHTML = "<p>Erro ao buscar seu histórico.</p>"; }
