--- a/login.html
+++ b/login.html
@@ -4,31 +4,46 @@
   <meta charset="UTF-8">
   <title>Scanlist Market - Entrar</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
   <style>
-    .login-body { font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #d40000; margin: 0; }
-    .login-card { background: white; padding: 30px; border-radius: 8px; width: 90%; max-width: 400px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.2); }
-    input { width: 100%; padding: 12px; margin: 8px 0; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; }
-    button { width: 100%; padding: 12px; background-color: #d40000; color: white; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; width: 100%; }
-    .switch { margin-top: 15px; font-size: 14px; }
-    a { color: #d40000; text-decoration: none; font-weight: bold; }
+    .login-body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #d40000; margin: 0; }
+    .login-card { background: white; padding: 30px; border-radius: 12px; width: 90%; max-width: 380px; text-align: center; box-shadow: 0 10px 25px rgba(0,0,0,0.2); }
+    .login-logo { width: 160px; margin-bottom: 20px; }
+    h2 { color: #333; margin-bottom: 20px; font-size: 22px; }
+    input { width: 100%; padding: 14px; margin: 10px 0; border: 1px solid #ddd; border-radius: 6px; box-sizing: border-box; font-size: 16px; }
+    button { width: 100%; padding: 14px; background-color: #d40000; color: white; border: none; border-radius: 6px; cursor: pointer; font-weight: bold; font-size: 16px; transition: background 0.3s; }
+    button:hover { background-color: #b30000; }
+    .footer-links { margin-top: 20px; font-size: 14px; color: #666; }
+    .footer-links a { color: #d40000; text-decoration: none; font-weight: bold; }
+    .forgot-password { display: block; margin-top: 15px; font-size: 13px; color: #888; text-decoration: none; cursor: pointer; }
+    .forgot-password:hover { text-decoration: underline; }
   </style>
 </head>
 <body class="login-body">
+
   <div class="login-card">
-    <h2>Entrar</h2>
-    <input type="email" id="loginEmail" placeholder="Email">
-    <input type="password" id="loginPass" placeholder="Senha">
-    <button id="btnLogin">Entrar</button>
+    <img src="logo-white.jpg" class="login-logo" alt="Scanlist Market">
     
-    <div class="switch">
-      Ainda não tem conta? <a href="index.html">Cadastre-se aqui</a>
+    <h2>Bem-vindo de volta</h2>
+
+    <input type="email" id="loginEmail" placeholder="Seu e-mail">
+    <input type="password" id="loginPass" placeholder="Sua senha">
+
+    <button id="btnLogin">Entrar no App</button>
+
+    <span class="forgot-password" id="btnForgot">Esqueci-me da senha</span>
+
+    <div class="footer-links">
+      Ainda não tem conta? <a href="index.html">Criar acesso</a>
     </div>
   </div>
 
   <script type="module">
+    // Importação dos módulos necessários do Firebase
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
+    import { getAuth, signInWithEmailAndPassword, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
 
+    // Sua configuração do Firebase (conforme os arquivos anteriores)
     const firebaseConfig = {
       apiKey: "AIzaSyCtke_2T3e0HDDMqJsfJsRGs5KcKtN3Xe8",
       authDomain: "scanlistmarket-30143.firebaseapp.com",
@@ -39,18 +54,44 @@
       appId: "1:428406265714:web:0a9d92dc1229458a3d6feb"
     };
 
+    // Inicialização
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
+    // Lógica de Login (Ajustada para evitar erros de global scope)
     document.getElementById("btnLogin").addEventListener("click", async () => {
       const email = document.getElementById("loginEmail").value;
       const pass = document.getElementById("loginPass").value;
 
+      if (!email || !pass) {
+        alert("Por favor, preencha todos os campos.");
+        return;
+      }
+
       try {
         await signInWithEmailAndPassword(auth, email, pass);
+        // Se o login for bem-sucedido, redireciona para a tela principal
         window.location.href = "app.html";
       } catch (error) {
-        alert("Erro ao entrar: Verifique o email e a senha.");
+        console.error("Erro no login:", error.code);
+        alert("Erro ao entrar: E-mail ou senha incorretos.");
+      }
+    });
+
+    // Lógica de Recuperação de Senha
+    document.getElementById("btnForgot").addEventListener("click", async () => {
+      const email = document.getElementById("loginEmail").value;
+      
+      if (!email) {
+        alert("Digite o seu e-mail no campo acima primeiro.");
+        return;
+      }
+
+      try {
+        await sendPasswordResetEmail(auth, email);
+        alert("E-mail de recuperação enviado! Verifique a sua caixa de entrada.");
+      } catch (error) {
+        alert("Erro: Verifique se o e-mail está correto.");
       }
     });
   </script>
