--- a/index.html
+++ b/index.html
@@ -4,18 +4,15 @@
   <meta charset="UTF-8">
   <title>Scanlist Market - Criar Conta</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css"> 
   <style>
-    /* Estilos rápidos caso o CSS externo não carregue */
     .login-body { font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #d40000; margin: 0; }
-    .login-card { background: white; padding: 30px; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); width: 90%; max-width: 400px; text-align: center; }
+    .login-card { background: white; padding: 30px; border-radius: 12px; width: 90%; max-width: 400px; text-align: center; box-shadow: 0 10px 20px rgba(0,0,0,0.2); }
     .login-logo { width: 150px; margin-bottom: 20px; }
-    input { width: 100%; padding: 12px; margin: 8px 0; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; }
-    button { width: 100%; padding: 12px; background-color: #d40000; color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 16px; font-weight: bold; }
-    button:hover { background-color: #b30000; }
-    .switch { margin-top: 15px; font-size: 14px; }
-    .password-field { position: relative; }
-    .password-field span { position: absolute; right: 10px; top: 18px; cursor: pointer; }
+    input { width: 100%; padding: 12px; margin: 8px 0; border: 1px solid #ccc; border-radius: 6px; box-sizing: border-box; font-size: 16px; }
+    button { width: 100%; padding: 14px; background-color: #d40000; color: white; border: none; border-radius: 6px; cursor: pointer; font-size: 16px; font-weight: bold; margin-top: 10px; }
+    .switch { margin-top: 20px; font-size: 14px; }
+    a { color: #d40000; text-decoration: none; font-weight: bold; }
+    .message { display: none; color: #2e7d32; margin-bottom: 12px; font-weight: 600; }
   </style>
 </head>
 
@@ -24,21 +21,14 @@
   <div class="login-card">
     <img src="logo-white.jpg" class="login-logo" alt="Scanlist Market">
 
-    <div class="message" id="msg" style="display:none; color:#2e7d32; margin-bottom:12px; font-weight:600;">
-      Conta criada com sucesso! Redirecionando...
-    </div>
+    <div class="message" id="msg">Conta criada! Redirecionando...</div>
 
     <input type="text" id="name" placeholder="Nome completo">
     <input type="email" id="email" placeholder="Email">
-
-    <div class="password-field">
-      <input type="password" id="password" placeholder="Senha">
-      <span onclick="togglePassword()">👁️</span>
-    </div>
-
+    <input type="password" id="password" placeholder="Senha (mínimo 6 caracteres)">
     <input type="password" id="confirm" placeholder="Confirmar senha">
 
-    <button id="btnRegister">Criar acesso</button>
+    <button id="btnCriarAcesso">Criar acesso</button>
 
     <div class="switch">
       Já possui uma conta? <a href="login.html">Clique aqui</a>
@@ -50,7 +40,6 @@
     import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
     import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-database.js";
 
-    // Configuração do teu projeto Firebase
     const firebaseConfig = {
       apiKey: "AIzaSyCtke_2T3e0HDDMqJsfJsRGs5KcKtN3Xe8",
       authDomain: "scanlistmarket-30143.firebaseapp.com",
@@ -61,61 +50,50 @@
       appId: "1:428406265714:web:0a9d92dc1229458a3d6feb"
     };
 
-    // Inicializar Firebase
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getDatabase(app);
 
-    // Função de Registro
-    async function register() {
+    // Conexão direta do botão com a função (Evita erro de escopo)
+    document.getElementById("btnCriarAcesso").onclick = async function() {
       const name = document.getElementById("name").value;
       const email = document.getElementById("email").value;
       const pass = document.getElementById("password").value;
       const confirm = document.getElementById("confirm").value;
 
       if (!name || !email || !pass || !confirm) {
-        alert("Preencha todos os campos");
+        alert("Preencha todos os campos!");
         return;
       }
 
       if (pass !== confirm) {
-        alert("As senhas não conferem");
+        alert("As senhas não conferem!");
         return;
       }
 
       try {
-        // 1. Criar utilizador no Firebase Auth
+        // 1. Cria o utilizador no Firebase Auth
         const userCredential = await createUserWithEmailAndPassword(auth, email, pass);
         const user = userCredential.user;
 
-        // 2. Salvar dados adicionais no Realtime Database usando o UID do utilizador
+        // 2. Salva no Database - CAMPO 'username' É O SEGREDO
         await set(ref(db, 'users/' + user.uid), {
           username: name,
           email: email,
-          createdAt: new Date().toISOString(),
-          totalCart: 0
+          totalCart: 0,
+          createdAt: new Date().toISOString()
         });
 
-        // 3. Sucesso
         document.getElementById("msg").style.display = "block";
         setTimeout(() => {
           window.location.href = "app.html";
-        }, 2000);
+        }, 1500);
 
       } catch (error) {
-        console.error(error);
-        alert("Erro ao cadastrar: " + error.message);
+        alert("Erro ao criar conta: " + error.message);
       }
-    }
-
-    // Tornar a função disponível para o botão e configurar o clique
-    document.getElementById("btnRegister").addEventListener("click", register);
-
-    // Função para mostrar/esconder senha
-    window.togglePassword = function() {
-      const pass = document.getElementById("password");
-      pass.type = pass.type === "password" ? "text" : "password";
     };
   </script>
+
 </body>
 </html>
